# AI-skills-bank

./: .env-example  .gitignore  .skill-manage-cli-config.json  .skills-bank-cli-config.json  AGENTS.md  Cargo.toml  aggregate-skills-to-subhubs.ps1  dist-workspace.toml  hub-manifests.csv  package-lock.json  package.json  readme.md  repos.json  sync-hubs.ps1
archive/: aggregate-skills-to-subhubs.ps1  clone_repos.ps1  generate-hub-manifests.ps1  generate-quick-index.ps1  generate-routing-tsv.ps1  sync-hubs.ps1  tmp_sync_test.ps1  validate-bmad-hybrid-20-scenarios.ps1  validate-generated-skills.ps1  validate-skill-invocation.ps1
cli/: Cargo.toml  README.md  package-lock.json  package.json  repos.json  test_sync.txt
cli/src/: app.rs  cli.rs  error.rs  index.mjs  lib.rs  main.rs
cli/src/components/: aggregator.rs  diagnostics.rs  fetcher.rs  manifest.rs  mod.rs  native_pipeline.rs  syncer.rs
cli/src/components/aggregator/: mod.rs  rules.rs
cli/src/utils/: atomicity.rs  log.rs  mod.rs  progress.rs  theme.rs
cli/tests/: fetch_test.rs  manifest_test.rs  sync_test.rs
config/: manual_overrides.csv
docs/: architecture.md  epics.md  prd.md  sprint-status.yaml
docs/stories/: story-01-cargo-dist.md  story-01-npm-wrapper.md  story-01-rust-init.md
scratch/: repro_sync_error.rs
scripts/: aggregate-skills-to-subhubs.ps1  clone-all-sources.ps1  clone_repos.ps1  detect-missing-categories.ps1  generate-hub-manifests.ps1  generate-routing-csv.ps1  generate-routing-tsv.ps1  generate-subhub-skill-md.ps1  prepare-skills-for-agent-analysis.ps1  semantic-skill-classifier.ps1  sync-hubs.ps1  validate-bmad-hybrid-20-scenarios.ps1  validate-categories.ps1  validate-generated-skills.ps1  validate-skill-invocation.ps1
skills-aggregated/: .skill-lock.json  AGENT-PROTOCOL.md  FINAL-ROADMAP-BMAD-HYBRID.md  README.md  SKILL.md  VALIDATION-20-SCENARIOS.md  ai-semantic-analysis.20260327-021044.ndjson  heuristic-summary.txt  move_skills.py  quick-index.json  quick-lookup.tsv  review-band.json  subhub-index.json
skills-aggregated/ai/: SKILL.md
skills-aggregated/ai/automation/: SKILL.md  skills-catalog.ndjson  skills-index.json  skills-manifest.json  workflow.md
skills-aggregated/ai/data-processing/: routing.csv  skills-catalog.csv  skills-index.json  skills-manifest.json
skills-aggregated/ai/llm-agents/: SKILL.md  routing.csv  routing.tsv  skills-catalog.csv  skills-catalog.ndjson  skills-index.json  skills-manifest.json  workflow.md
skills-aggregated/ai/ml-training/: routing.csv  skills-catalog.csv  skills-index.json  skills-manifest.json
skills-aggregated/ai/prompting-builder/: SKILL.md  routing.csv  routing.tsv  skills-catalog.csv  skills-catalog.ndjson  skills-index.json  skills-manifest.json  workflow.md
skills-aggregated/ai/prompting-factory/: routing.csv  skills-catalog.csv  skills-index.json  skills-manifest.json
skills-aggregated/backend/ci-cd/: routing.csv  (+3 more)
skills-aggregated/business/: SKILL.md
skills-aggregated/code-quality/: SKILL.md
skills-aggregated/frontend/: SKILL.md
skills-aggregated/mobile/: SKILL.md
skills-aggregated/server-side/: SKILL.md
source/: download.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/components/: diagnostics.rs  fetcher.rs  manifest.rs  mod.rs  native_pipeline.rs
src/tui/: action.rs  app.rs  background.rs  event.rs  mod.rs  terminal.rs
src/utils/: atomicity.rs  log.rs  mod.rs  paths.rs  progress.rs  theme.rs
tests/: aggregator_test.rs  atomicity_test.rs  cli_binary_test.rs  fetch_test.rs  fetcher_test.rs  manifest_test.rs  pipeline_test.rs  rules_test.rs  sync_test.rs  tests.rs  tui_test.rs
(+448 files in other folders)
