[package]
name = "skill-manage"
version = "0.1.0"
edition = "2021"
authors = ["ABDULSAMED"]
description = "Ultra-lightweight routing layer for AI agent workflows"

[[bin]]
name = "skill-manage"
path = "src/main.rs"

[dependencies]
serde_json = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
minijinja = { version = "2.7.0", features = ["serde"] }
crossterm = "0.28"
itertools = "0.14.0"
sha2 = "0.10.9"
once_cell = "1.20.2"
regex = "1.11.1"
walkdir = "2"
rayon = "1"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "process"] }
junction = "0.2.0"
home = "0.5"
serde_yaml = "0.9"
async-recursion = "1"
async-trait = "0.1"
fs_extra = "1.3"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
url = "2"
tempfile = "3.27.0"
dialoguer = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = "0.23"
rustls-native-certs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
