[package]
name = "skill-manage"
version = "0.1.0"
edition = "2024"
authors = ["ABDULSAMED"]
description = "Ultra-lightweight, zero-latency local routing layer for AI agent workflows"
repository = "https://github.com/abdulsamed1/AI-skills-bank"
homepage = "https://github.com/abdulsamed1/AI-skills-bank"
license = "MIT"

[dependencies]
# CLI and TUI
clap = { version = "4.6.0", features = ["derive"] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }

# Async and I/O
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.13"
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["tokio"] }
walkdir = "2.5.0"
home = "0.5.11"
fs_extra = "1.3.0"
pathdiff = "0.2.3"
junction = "1.2.0"

# Performance
rayon = "1.11.0"

# Error Handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Serialization
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.34"
csv = "1.3.1"
pulldown-cmark = "0.12.2"

# Utilities
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
itertools = "0.14.0"
sha2 = "0.10.9"
tempfile = "3.17.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
